Added project information

--- a/app/scripts/templates/home.html
+++ b/app/scripts/templates/home.html
@@ -1,6 +1,7 @@
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">Always a pleasure scaffolding your apps.</p>
+  <p class="lead">This is a demo of v0.0.0 of <a href="https://github.com/lucasprus/yeoman_users_api_and_backbone_app" target="_blank">yeoman_users_api_and_backbone_app</a></p>
 </div>
 
 <div class="row marketing">
