Made it work with Backbone 1.1.2

--- a/app/scripts/templates/user_new.html
+++ b/app/scripts/templates/user_new.html
@@ -1,8 +1,8 @@
 <form class="form-horizontal" role="form">
   <div class="form-group">
-    <label for="username" class="col-sm-2 control-label">Username</label>
+    <label for="clientUsername" class="col-sm-2 control-label">Username</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="username" id="username">
+      <input type="text" class="form-control" name="clientUsername" id="clientUsername">
     </div>
   </div>
   <div class="form-group">
